--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,16 +19,24 @@
     background-color: #FD6E0A;
     font-size: 20px;
     font-weight: bold;
+    border: none;
     color: white;
     padding: 18px 35px;
     border-radius: 5px;
+  }
+
+  /* header */
+  .header{
+    background-image: url(../images/developer.png), url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: left, bottom right;
   }
 /* Nav styles */
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 200px;
+    margin: 0 100px 0 200px;
 }
 
 .nav-title{
@@ -48,4 +56,28 @@ nav ul li{
 nav li a{
     text-decoration: none;
     font-size: 20px;
+}
+
+/* banner-styles */
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 200px;
+}
+
+.banner-content{
+    max-width: 580px;
+}
+.banner-greetings{
+    font-size: 45px;
+    font-weight: 600;
+}
+
+.banner-title{
+    font-weight: bold;
+    font-size: 85px;
+}
+
+.banner-pic{
+    width: 580px;
 }
